--- a/coin/templates/layout.html
+++ b/coin/templates/layout.html
@@ -7,7 +7,8 @@
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>Coin</title>
         <!-- Bootstrap -->
-        <link href="/static/lib/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/css/lib/bootstrap.min.css" rel="stylesheet">
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/lib/style.css') }}">
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
