--- a/coin/templates/admin/index.html
+++ b/coin/templates/admin/index.html
@@ -1,5 +1,4 @@
 {% extends 'admin/master.html' %}
-
 {% block body %}
-  <p>Coin Admin</p>
-{% endblock %}
+<p>Coin Dashboard</p>
+{% endblock body %}
