--- a/coin/templates/404.html
+++ b/coin/templates/404.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block body %}
     <h1>Coin Page Not Found</h1>
-    <p>Do you want to <a href="{{ url_for("signin") }}">SignIn</a></p>
+    <p>Do you want to <a href="{{ url_for("security.login") }}">SignIn</a></p>
 {% endblock %}
