--- a/coin/templates/layout.html
+++ b/coin/templates/layout.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>Coin</title>
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <!-- Bootstrap -->
         <link href="/static/css/lib/bootstrap.min.css" rel="stylesheet">
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/lib/style.css') }}">
