--- a/coin/templates/security/login_user.html
+++ b/coin/templates/security/login_user.html
@@ -1,4 +1,5 @@
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
+<body>
 {% include "security/_messages.html" %}
 <h1>Login</h1>
 <form action="{{ url_for_security('login') }}" method="POST" name="login_user_form">
@@ -10,3 +11,4 @@
   {{ render_field(login_user_form.submit) }}
 </form>
 {% include "security/_menu.html" %}
+</body>
