--- a/coin/templates/signin.html
+++ b/coin/templates/signin.html
@@ -2,15 +2,15 @@
 {% block body %}
     <h1>Coin Signin</h1>
     {% if error %}
-        <p class="error"><strong>Error:</strong> {{ error }}
+        <p class="error"><strong>Error:</strong> {{ error }}</p>
     {% endif %}
     <form action="" method="post">
         <dl>
             <dt>Username:</dt>
-            <dd><input type=text name=username value="{{ request.form.username }}"></dd>
+            <dd><input type="text" name="username" value="{{ request.form.username }}" /></dd>
             <dt>Password:</dt>
-            <dd><input type=password name=password></dd>
+            <dd><input type="password" name="password" /></dd>
         </dl>
-        <p><input type=submit value=Login></p>
+        <p><input type="submit" value="Login" /></p>
     </form>
 {% endblock %}
