--- a/coin/templates/upload.html
+++ b/coin/templates/upload.html
@@ -2,12 +2,12 @@
 {% block body %}
     <h1>Coin Upload</h1>
     {% if error %}
-        <p class="error"><strong>Error:</strong> {{ error }}
+        <p class="error"><strong>Error:</strong> {{ error }}</p>
     {% endif %}
     <form action="/upload/" method="post" enctype="multipart/form-data">
         <p>
-            <input type="file" name="file">
-            <input type="submit" value="Upload">
+            <input type="file" name="file" />
+            <input type="submit" value="Upload" />
         </p>
     </form>
 {% endblock %}
