--- a/coin/templates/admin/index.html
+++ b/coin/templates/admin/index.html
@@ -2,6 +2,7 @@
 {% block body %}
     {% if current_user.has_role("admin") %}
         <p>Welcome</p>
+        <a href="{{ url_for('security.logout', next=request.url) }}">Logout</a>
     {% else %}
         <a href="{{ url_for('security.login', next=request.url) }}">Login</a>
     {% endif %}
