--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "bootstrap/base.html" %}
 
-</body>
-</html>
+{% block title %}Coin{% endblock %}
+
+{% block head %}
+
+    {{ super() }}
+
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon" />
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon" />
+
+{% endblock %}
+
+{% block scripts %}
+
+    {{ super() }}
+
+    {{ moment.include_moment() }}
+
+{% endblock %}
