--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block content %}
-<p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
-<p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
+    {{ moment.lang('zh_CN') }}
+    <p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
+    <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
+
+    {{ wtf.quick_form(security.login_form()) }}
 {% endblock %}
+
+
