--- a/app/templates/registration.html
+++ b/app/templates/registration.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
 
 {% block body %}
-
-    <form method="post" action="/registration">
-
+  {{ super() }}
+  <div class="container">
+    <form id='registration' method="post" action="/registration">
+    <h3>报名与会／Enroll</h3>
         {{ registration_form.hidden_tag() }}
 
         {{ registration_form.first_name.label }}{{ registration_form.first_name() }}
@@ -34,8 +34,7 @@
         {{ registration_form.submit() }}
 
     </form>
-
-{#    {{ wtf.quick_form(registration_form) }}#}
+</div>
 
 {% endblock %}
 
