--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="content">
       <div class="event-title">
-        <p>会议介绍 / Event Introduction</p>
+        <p>活动 / Event</p>
         <p>卫生技术评估研讨会001期</p>
         <a class="right" href="/registration">注册与会/Enroll</a>
       </div>
